--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "devDependencies": {
     "@types/node": "^9.6.1",
+    "clang-format": "^1.0.41-c",
     "ts-node": "^5.0.1",
     "typescript": "^2.8.1",
     "xml2json": "^0.11.2"
