--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.0.1",
   "main": "src/index.ts",
   "license": "",
+  "scripts": {
+    "test": "ts-node src/index.ts"
+  },
   "devDependencies": {
     "@types/node": "^9.6.1",
     "@types/request": "^2.47.0",
@@ -12,6 +15,7 @@
     "request": "^2.85.0",
     "request-promise-native": "^1.0.5",
     "ts-node": "^5.0.1",
+    "tslint": "^5.9.1",
     "typescript": "^2.8.1",
     "xml2json": "^0.11.2"
   }
