--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "test": "ts-node src/index.ts"
   },
   "devDependencies": {
+    "@types/bson": "^1.0.7",
     "@types/node": "^9.6.1",
     "@types/request": "^2.47.0",
     "@types/request-promise-native": "^1.0.14",
     "@types/xml2json": "^0.10.0",
+    "bson": "^2.0.4",
     "clang-format": "^1.0.41-c",
     "request": "^2.85.0",
     "request-promise-native": "^1.0.5",
