--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,8 +6,11 @@
     "removeComments": true,
     "preserveConstEnums": true,
     "declaration": true,
-    "target": "es5",
-    "lib": ["es2015", "dom"],
+    "target": "es6",
+    "lib": [
+      "es2017",
+      "dom"
+    ],
     "outDir": "./dist",
     "noUnusedLocals": true,
     "noImplicitReturns": true,
