--- a/package.json
+++ b/package.json
@@ -13,13 +13,14 @@
     "@types/request": "^2.47.0",
     "@types/request-promise-native": "^1.0.14",
     "@types/xml2json": "^0.10.0",
-    "bson": "^2.0.4",
     "clang-format": "^1.0.41-c",
-    "request": "^2.85.0",
-    "request-promise-native": "^1.0.5",
     "ts-node": "^5.0.1",
     "tslint": "^5.9.1",
-    "typescript": "^2.8.1",
+    "typescript": "^2.8.1"
+  },
+  "dependencies": {
+    "request": "^2.85.0",
+    "request-promise-native": "^1.0.5",
     "xml2json": "^0.11.2"
   }
 }
