--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "baseball-pitch-data",
+  "name": "baseball-pitchfx-data",
   "version": "0.0.1",
   "main": "src/index.ts",
   "license": "",
