--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "baseball-pitchfx-data",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Returns PitchFX Pitch data from XML source files.",
   "author": {
     "name": "Nick Kreeger"
   },
-  "main": "src/index.ts",
-  "types": "dist/index.d.ts",
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "license": "Apache-2.0",
   "scripts": {
     "generate": "ts-node src/generate.ts",
