--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "types": "./dist/index.d.ts",
   "license": "Apache-2.0",
   "scripts": {
+    "build": "tsc",
     "generate": "ts-node src/generate.ts",
     "download": "ts-node src/download.ts"
   },
