--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "typescript": "^2.8.1"
   },
   "dependencies": {
+    "containers.js": "^0.0.4",
     "request": "^2.85.0",
     "request-promise-native": "^1.0.5",
     "xml2json": "^0.11.2"
