--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "baseball-pitchfx-data",
-  "version": "0.0.11",
+  "version": "0.0.12",
   "description": "Returns PitchFX Pitch data from XML source files.",
   "author": {
     "name": "Nick Kreeger"
@@ -29,6 +29,7 @@
     "typescript": "^2.8.1"
   },
   "dependencies": {
+    "baseball-pitchfx-types": "^0.0.1",
     "containers.js": "^0.0.4",
     "request": "^2.85.0",
     "request-promise-native": "^1.0.5",
